<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Quizzes</string>
    <string name="gotoquiz_button">Go to Quiz App</string>
    <string name="splash_content">Aplicatie Simulare \nCod Penal si de Procedura.\n Cred?</string>
    <string name="title_activity_quiz">QuizActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="next_question_button">Next Question</string>
    <string name="show_answer_button">Show Answer</string>
    <string name="current_score">Current Score:</string>

    <string name="dummy_question">Lorem ipsum Lorem ipsum Lorem ipsum
    Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum</string>
    <string name="dummy_answerA">Lorem ipsum Lorem ipsum Lorem ipsum
    Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum</string>
    <string name="dummy_answerB">Lorem ipsum Lorem ipsum Lorem ipsum
    Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum</string>
    <string name="dummy_answerC">Lorem ipsum Lorem ipsum Lorem ipsum
    Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum</string>

</resources>
