<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0099cc"
    tools:context="org.dasta.quizzes.lawquiz.MainActivity">

    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->
    <TextView android:id="@+id/fullscreen_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:keepScreenOn="true"
        android:textColor="#33b5e5"
        android:textStyle="bold"
        android:textSize="50sp"
        android:gravity="center"
        android:text="@string/splash_content" />

    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->
    <FrameLayout android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <LinearLayout android:id="@+id/fullscreen_content_controls"
            style="?metaButtonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:background="@color/black_overlay"
            android:orientation="horizontal"
            tools:ignore="UselessParent">

            <Button android:id="@+id/gotoapp_button"
                style="?metaButtonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/gotoquiz_button"
                android:onClick="showQuiz"/>

        </LinearLayout>

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_gravity="center|center"
                android:id="@+id/check_box_controls"
                android:background="@color/black_overlay">

            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:id="@+id/textViewScore"
                        android:layout_column="39"
                        android:text="@string/current_score"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="0"
                        android:id="@+id/textViewScoreValue"/>
            </LinearLayout>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/dummy_question"
                    android:id="@+id/textViewQuestion"
                    android:layout_gravity="left|top"/>

            <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dummy_answerA"
                    android:id="@+id/checkBoxA"

                    android:drawableLeft="@android:color/transparent"
                    android:drawablePadding="20dp"
                    android:padding="5dp"
                    android:layout_gravity="left"/>

            <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/checkBoxB"

                    android:drawableLeft="@android:color/transparent"
                    android:drawablePadding="20dp"
                    android:padding="5dp"

                    android:text="@string/dummy_answerB"
                    android:layout_gravity="left"/>

            <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dummy_answerC"
                    android:id="@+id/checkBoxC"

                    android:drawableLeft="@android:color/transparent"
                    android:drawablePadding="20dp"
                    android:padding="5dp"


                    android:layout_gravity="left"/>

            <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/next_question_button"
                    android:id="@+id/button"
                    android:onClick="nextQuestion"
                    android:layout_gravity="center_horizontal"/>

            <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/show_answer_button"
                    android:id="@+id/button2"
                    android:onClick="showAnswers"/>

            <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:visibility="visible"
                    android:id="@+id/ans_table">

                <TableRow
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent">

                    <CheckBox
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="A"
                            android:id="@+id/checkBoxAA"
                            android:layout_column="1"/>

                    <CheckBox
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="B"
                            android:id="@+id/checkBoxAB"
                            android:layout_column="17"/>

                    <CheckBox
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="C"
                            android:id="@+id/checkBoxAC"
                            android:layout_column="34"/>

                </TableRow>

            </TableLayout>

        </LinearLayout>
    </FrameLayout>

</FrameLayout>
